# parallel-computing-assignment

./: .gitignore  CMakeLists.txt  README.md  scriptCpp.pbs  testScript.sh
apps/: CMakeLists.txt  app.cpp  cache.cpp  cache_bench.cpp  run.cpp
include/lib/: lib.h  matrix.h  tools.h
report/: report.tex
scripts/: assignament.pbs  assignament.sh  generate_graphs.py  generate_graphs_all.py  generate_graphs_best.py  generate_graphs_memory.py  generate_graphs_sel.py  generate_graphs_speedup.py  run_benchmarks.sh
src/: CMakeLists.txt  lib.cpp  main  main.cpp  matrix.cpp  tools.cpp
tests/: CMakeLists.txt  benchmarks.cpp  main.cpp  test.cpp
