add_executable(app app.cpp)
add_executable(cache_bench cache_bench.cpp)
add_executable(run run.cpp)

target_link_libraries(app PRIVATE matrix_library)
target_link_libraries(app PRIVATE tools_library)
target_link_libraries(app PRIVATE perf-cpp)
target_link_libraries(cache_bench PRIVATE matrix_library)
target_link_libraries(cache_bench PRIVATE tools_library)
target_link_libraries(cache_bench PRIVATE perf-cpp)
target_link_libraries(run PRIVATE matrix_library)
target_link_libraries(run PRIVATE tools_library)

if (BUILD_OPTIMIZED_O2)
	message("Building apps targets with -O2")
	target_compile_options(app PRIVATE -O2)
	target_compile_options(cache_bench PRIVATE -O2)
	target_compile_options(run PRIVATE -O2)
endif()
if (BUILD_OPTIMIZED_O1)
	message("Building apps targets with -O1")
	target_compile_options(app PRIVATE -O1)
	target_compile_options(cache_bench PRIVATE -O1)
	target_compile_options(run PRIVATE -O1)
endif()
