add_executable(tests test.cpp)
add_executable(benchmarks benchmarks.cpp main.cpp)

target_link_libraries(tests PRIVATE Catch2::Catch2WithMain)
target_link_libraries(tests PRIVATE matrix_library)
target_link_libraries(tests PRIVATE tools_library)

target_link_libraries(benchmarks PRIVATE Catch2::Catch2)
target_link_libraries(benchmarks PRIVATE matrix_library)
target_link_libraries(benchmarks PRIVATE tools_library)

catch_discover_tests(tests)
# catch_discover_tests(benchmarks)
if (BUILD_OPTIMIZED_O2)
	message("Building test targets with -O2")
	target_compile_options(tests PRIVATE -O2)
	target_compile_options(benchmarks PRIVATE -O2)
endif()
if (BUILD_OPTIMIZED_O1)
	message("Building tests targets with -O1")
	target_compile_options(tests PRIVATE -O1)
	target_compile_options(benchmarks PRIVATE -O1)
endif()
if (BUILD_OPTIMIZED_OF)
	message("Building tests targets with -Ofast")
	target_compile_options(tests PRIVATE -Ofast )
	target_compile_options(benchmarks PRIVATE -Ofast)
endif()
